レイアウトパーツ修正

--- a/layout_parts/q8/index.html
+++ b/layout_parts/q8/index.html
@@ -152,7 +152,7 @@
                     </li>
                   </ul>
                   <div class="form__btn">
-                    <button class="main__btn">送信</button>
+                    <button class="main__btn form__input">送信</button>
                   </div>
                 </div>
 
