--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -33,16 +33,16 @@
         <!-- 回答はクラスq4の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
-        <div class="q4">
+        <div class="q4 container">
           <div class="bar">
-            <div class="bar__column bar__topleft">固定</div>
-            <div class="bar__column bar__topcenter">可変</div>
-            <div class="bar__column bar__topright">固定</div>
+            <div class="bar__column bar__top__left">固定</div>
+            <div class="bar__column bar__top__center">可変</div>
+            <div class="bar__column bar__top__right">固定</div>
           </div>
           <div class="bar">
-            <div class="bar__column bar__bottomleft">可変</div>
-            <div class="bar__column bar__bottomcenter">可変</div>
-            <div class="bar__column bar__bottomright">固定</div>
+            <div class="bar__column bar__bottom__left">可変</div>
+            <div class="bar__column bar__bottom__center">可変</div>
+            <div class="bar__column bar__bottom__right">固定</div>
           </div>
         </div>
         <!-- 回答はクラスq4の要素の中に書いてね -->
